Shard split donor service should not use abortToken when writing commit decision

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Server Serverless 2022-05-30, Server Serverless 2022-06-13
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Similar to SERVER-60829, we should use the primary cancellation token to avoid a well-timed abortShardSplit from aborting an already completed shard split operation.

            Assignee:
            Mathis Bessa (Inactive)
            Reporter:
            Matt Broadstone
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: