SERVER-66704 use primaryToken for committed state doc transition