src/mongo/db/serverless/shard_split_donor_service.h
@@ -166,8 +166,11 @@ private:
     ExecutorFuture<void> _applySplitConfigToDonor(const ScopedTaskExecutorPtr& executor,
                                                   const CancellationToken& abortToken);
 
-    ExecutorFuture<void> _waitForRecipientToAcceptSplitAndTriggerElection(
-        const ScopedTaskExecutorPtr& executor, const CancellationToken& abortToken);
+    ExecutorFuture<void> _waitForRecipientToAcceptSplit(const ScopedTaskExecutorPtr& executor,
+                                                        const CancellationToken& primaryToken);
+
+    ExecutorFuture<void> _triggerElectionAndEnterCommitedState(
+        const ScopedTaskExecutorPtr& executor, const CancellationToken& primaryToken);
 
     ExecutorFuture<void> _waitForForgetCmdThenMarkGarbageCollectable(
         const ScopedTaskExecutorPtr& executor, const CancellationToken& primaryToken);
