jstests/serverless/libs/basic_serverless_test.js
@@ -7,13 +7,9 @@ const runForgetShardSplitAsync = function(primaryHost, migrationIdString) {
     return primary.adminCommand({forgetShardSplit: 1, migrationId: UUID(migrationIdString)});
 };
 
-const runAbortShardSplitAsync = function(rstArgs, migrationIdString) {
-    load("jstests/replsets/rslib.js");
-
-    const donorRst = createRst(rstArgs, true);
-    const admin = donorRst.getPrimary().getDB("admin");
-
-    return admin.runCommand({abortShardSplit: 1, migrationId: UUID(migrationIdString)});
+const runAbortShardSplitAsync = function(primaryHost, migrationIdString) {
+    const primary = new Mongo(primaryHost);
+    return primary.adminCommand({abortShardSplit: 1, migrationId: UUID(migrationIdString)});
 };
 
 const runCommitShardSplitAsync = function(rstArgs,
@@ -147,9 +143,12 @@ class ShardSplitOperation {
         jsTestLog("Running forgetShardSplit command");
 
         this.basicServerlessTest.removeRecipientNodesFromDonor();
+        const donorRstArgs = createRstArgs(this.donorSet);
+        this.basicServerlessTest.removeRecipientsFromRstArgs(donorRstArgs);
+        const donorSet = createRst(donorRstArgs, true);
 
         const cmdObj = {forgetShardSplit: 1, migrationId: this.migrationId};
-        assert.commandWorked(runShardSplitCommand(this.donorSet,
+        assert.commandWorked(runShardSplitCommand(donorSet,
                                                   cmdObj,
                                                   true /* retryableOnErrors */,
                                                   false /*enableDonorStartMigrationFsync*/));
@@ -175,11 +174,11 @@ class ShardSplitOperation {
      */
     abortAsync() {
         jsTestLog("Running abortShardSplit command asynchronously");
-        const donorRstArgs = createRstArgs(this.donorSet);
+        const primary = this.basicServerlessTest.getDonorPrimary();
         const migrationIdString = extractUUIDFromObject(this.migrationId);
 
         const abortShardSplitThread =
-            new Thread(runAbortShardSplitAsync, donorRstArgs, migrationIdString);
+            new Thread(runAbortShardSplitAsync, primary.host, migrationIdString);
 
         abortShardSplitThread.start();
 
@@ -191,8 +190,8 @@ class ShardSplitOperation {
      */
     abort() {
         jsTestLog("Running abort command");
-
-        const admin = this.donorSet.getPrimary().getDB("admin");
+        const primary = this.basicServerlessTest.getDonorPrimary();
+        const admin = primary.getDB("admin");
 
         return admin.runCommand({abortShardSplit: 1, migrationId: this.migrationId});
     }
